app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@import "teams.scss";
@import "bootstrap-sprockets";
@import "bootstrap";
@import "rails_bootstrap_forms";

$primary: #1d1160;
$btf-pink: #ff5757;
$btf-blue: #1d1160;

body
{
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 500;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 15px;
}

h1
{
  margin-bottom: 20px;
}

h3#favourite_count
{
  position: sticky;
  position: -webkit-sticky;
  background-color: white;
  color: $btf-pink;
  top: 0;
  text-align: center;
  margin-bottom: 20px;
}
p#favourite_count
{
  margin-bottom: 0;
}

.card
{

  &.with-padding
  {
    padding: 10px 15px;
  }
}

.scroll-padding
{
  padding: 10px 0;
}
div#team_captain_id
{
  margin-bottom: 20px;
}
form
{
  padding: 20px;
}

.form-footer
{
  padding: 0  20px;
}

.over-fav-limit
{
  color: $btf-blue;
}
.under-fav-limit
{
  color: $btf-pink;
}

.navbar
{
  // box-shadow: 0 6px 7px 0 rgba(0,0,0,.15);
  padding: 10px 0;
}

.navbar-default
{
  background-color: $btf-pink;
  padding: 10px 20px;
}

.navbar-brand
{
  padding: 0;
  padding: 0 10px;
  display: inline-flex;
  align-items: center;
}

.navbar-default .navbar-nav > li > a
{
  color: white;

  &.active,
  &:hover
  {
    color: $btf-blue;
  }
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: white;
}

.navbar-collapse
{
  border: none;
  box-shadow: none;
}

ul
{
  list-style-type: none;
  padding-inline-start: 0;
}

.error-message
{
  color: $btf-pink;
  font-size: 20px;
  text-align: center;
}

.btn.btn-primary
{
  background-color: $btf-pink;
  border-color: $btf-pink;
  font-weight: 600;

  &:hover
  {
    background-color: white;
    color: $btf-pink;
    border-color: $btf-pink;
  }
  
  &.active.focus,
  &.active.active:focus,
  &.active.active:hover,
  &.active:active.focus,
  &.active:active:focus,
  &.active:active:hover
  {
    background-color: $btf-pink;
    border-color: $btf-pink;
    color: white;
    outline: none !important;
  }

  &.block-page-btn
  {
    display: block;
    margin-top: 20px;
    width: 100%;
  }

}

// Team show
.team-info-wrapper,
.deadline-text-wrapper,
.league-info-wrapper
{
  padding: 10px 0px;
}

.list-group-item
{
  display: flex;
  justify-content: space-between;
  padding: 10px 15px;
  border: none;
  margin-bottom: 0;
  border-bottom: 1px solid #ddd;

  &.competitions-index
  {
    display: block;
  }

  &:last-of-type
  {
    border-radius: 0;
  }

  .btf-logo,
  .captains-logo
  {
    position: absolute;
    right: 15px;
    top: 0;
    height: 100%;
  }
}


// flash notices
.alert-info,
.alert-danger
{
  text-align: center;
}

.p-wrapper
{
  text-align: justify;
  padding: 0 90px;

  @media screen and (max-width: 600px) {
    & {
      padding: 0 20px;
    }
  }
}

.text-muted
{
  color: $btf-blue;
}

.deadline-text-wrapper
{
  .block-page-btn
  {
    margin-top: 0;
  }
}

.league-info-wrapper
{
  form
  {
    padding: 0;

    .block-page-btn
    {
      margin-top: 0;
    }

  }

}

.list-group
{
  .team-info
  {
    text-align: center;
  }
  .league-position
  {
    margin-right: 10px;
  }

  .team-points
  {
    margin-left: 10px;
  }
}

.league-btn
{
  margin-bottom: 10px;
}


.list-group-item
{
  &.favourite-color
  {
    background-color: $btf-pink;
    color: white;
  }
  &.captain-color
  {
    background-color: $btf-blue;
    color: white;
  }
}

.payment-notice-link
{
  &:hover
  {
    text-decoration: none;
    cursor: pointer;
  }
}


.payment-notice-wrapper
{
  text-align: center;
  padding: 10px;
  border-radius: 5px;
}

.rules-and-guidance
{
  p
  {
    text-align: justify;
  }

  ul
  {
    list-style-type: circle;
    padding-inline-start: 20px;
  }
}

.pick-status-label
{
  margin-left: 25px;
}

